kleine aanpassing alert

--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
   <div class="alert-container">
     <h1>This site is still under construction</h1>
     <p>
-      The site is not yet available, but if you have any questions, please contact us via the link below.
+      The site is not yet available yet
     </p>
-    <a href="TemporaryContact.html">Contact</a>
   </div>
 </body>
 </html>
