Add link to recent project in index.html
Added a link to a project showcasing Lenis Scroll.

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     <h1>This site is still under construction</h1>
     <p>
       The site is not yet available yet
+      Wanna Watch Something i recently made and where i also am busy with
+
+      <a href="https://ferrari-lenis-scroll.vercel.app/">My Fist time using Lenis Scroll</a>
     </p>
   </div>
 </body>
