Modify title and add project list in home.html
Updated the title and added a list of projects.

--- a/home.html
+++ b/home.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gemaakte / meegewerkten sites</title>
 </head>
 <body>
+    eigen thema 
+    statement carwrap2
+    maduglass
+    eigenenergie
+    brecon
+    srba
+    corp-construction
     
 </body>
 </html>
